<resources>
    <string name="app_name">ActualApp</string>
    <string name="register_nbelow_n">Register\nbelow!\n</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="add_exercise">Add Record</string>
    <string name="title_home">Home</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_friends">Friends</string>
    <string name="title_profile">Profile</string>
</resources>