<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterPageActivity"
    android:background="@color/backgroundTeal"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/headerText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="41dp"
                    android:text="@string/register_nbelow_n"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_login_hero"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="20dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registerName"
                            style="@style/loginRegisterText"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:hint="@string/name"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="20dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registerEmail"
                            style="@style/loginRegisterText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:hint="@string/email"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        android:layout_marginTop="20dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registerMobile"
                            style="@style/loginRegisterText"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:hint="@string/mobile_number"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="20dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registerPassword"
                            style="@style/loginRegisterText"
                            android:hint="@string/password"
                            android:maxLines="1"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                        android:id="@+id/registerButton"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:background="@drawable/login_edittext_bar"
                        app:spinning_bar_width="6dp"
                        app:spinning_bar_color="@color/white"
                        android:text="@string/register"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/backgroundTeal"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_padding="2dp" />

                    <TextView
                        style="@style/parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:height="48dp"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:text="@string/already_have_an_account"
                        android:layout_marginTop="20dp"
                        android:onClick="onLoginClick"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>